cncProd/force-app/main/default/objects/BulkFileUpload__c/BulkFileUpload__c.object-meta.xml
<CustomObject>
    <label>BulkFileUpload</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>BulkFileUpload Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BulkFileUploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>