cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PDPA Call</inlineHelpText>
    <label>Call</label>
    <type>Checkbox</type>
</CustomField>