cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>