cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>