cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PDPA Fax</inlineHelpText>
    <label>Fax</label>
    <type>Checkbox</type>
</CustomField>