cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/isEmail__c.field-meta.xml
<CustomField>
    <fullName>isEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PDPA Email</inlineHelpText>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>