cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/No_of_OK_Records__c.field-meta.xml
<CustomField>
    <fullName>No_of_OK_Records__c</fullName>
    <label>No of OK Records</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>