cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/No_of_Prospects_Failed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Prospects_Failed__c</fullName>
    <label>No of Prospects Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>