cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Opp_Created__c.field-meta.xml
<CustomField>
    <fullName>Opp_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp Created</label>
    <type>Checkbox</type>
</CustomField>