cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Preferred_Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sales_Consultant__c</fullName>
    <label>Preferred Sales Consultant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>