cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Prospect_Created__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect Created</label>
    <type>Checkbox</type>
</CustomField>