cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PDPA SMS</inlineHelpText>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>