cncProd/force-app/main/default/objects/BulkFileUpload__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>